* Reorganized the package (directory) layout
* Renamed some files, classes and methods
* Added some more abstraction
* Added test files for semi-unit testing and set the form default to these test cases
* Added lots of documentation throughout
* Some code clean up
=============
Token streams:
* Enabled token stream caching
=============
Directory walker:
* Added caching of retrieved file lists & method to clear the cache
=============
Tokenizer:
* No longer an extension of TokenStream
* Filter on token type: can now deal with an array of types
* Parse comment: can now filter on an array of tags
* Parse comment: will now also save tags without additional information/description
* Parse comment line: will now return the original line if the line could not be parsed (was false)
* Parse comment line: added phpDoc1 tags which are no longer (or not yet) present in phpDoc2
* Parse comment line: started work on using named matches
* Parse comment line: added routine for author
=============
Hook documentor:
* Added two more sort options and their associated methods
* Fixed the php output

--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,35 @@
-#wpphd {
+#wpd {
 	font-family: helvetica, verdana, sans-serif;
 	font-size: 14px;
 }
-form#wpphd-form {
+form#wpd-form {
 }
 
-form#wpphd-form input[type="text"] {
+form#wpd-form input[type="text"] {
 	width: 500px;
 }
 
-form#wpphd-form div {
+form#wpd-form div {
 	clear: both;
 }
 
-form#wpphd-form .wpphd-column {
+form#wpd-form .wpd-column {
 	width: 30%;
 	padding: 5px 10px 10px 10px;
 	float: left;
 	clear: none;
 }
 
-form#wpphd-form .wpphd-column p {
+form#wpd-form .wpd-column p {
 	height: 2.3em;
 }
 
 
 
-form#wpphd-output {
+form#wpd-output {
 }
 
-form#wpphd-output textarea {
+form#wpd-output textarea {
 	width: 900px;
 	height: 600px;
 	min-height: 600px;
